@@ -11,6 +11,7 @@ import rs.ac.uns.acs.nais.TimeseriesDatabaseService.saga.choreography.event.Chan
 
 import java.time.Instant;
 import java.time.LocalDateTime;
+import java.util.List;
 import java.util.UUID;
 
 /*
@@ -19,6 +20,8 @@ import java.util.UUID;
 @Slf4j
 @Service
 public class SagaChoreographyService {
+    // Status koji koristimo kao "prethodni" kada za datu narudzbinu jos ne postoji nijedan upisan event (prvi event uopste za tu narudzbinu)
+    private static final String NEMA_PRETHODNOG_STATUSA = "NONE";
     private final LibraryInfluxRepositoryImpl repository;
     private final RabbitTemplate rabbitTemplate;
 
@@ -38,8 +41,13 @@ public class SagaChoreographyService {
         String sagaId = UUID.randomUUID().toString();
         log.info("[CHOREOGRAPHY] sagaId={} -- zahtev={}", sagaId, zahtev);
 
-        // Cuvamo staro stanje u slucaju greske
-        PromenaStatusaPorudzbine promenaStatusaPorudzbine = repository.findLastStatusByNarudzbinaid(zahtev.getPromenaStatusaPorudzbine().getNarudzbinaid()).getFirst();
+        String narudzbinaid = zahtev.getPromenaStatusaPorudzbine().getNarudzbinaid();
+
+        // Cuvamo staro stanje u slucaju greske (rollback) i kako bismo ga prosledili dalje kroz event lanac (potrebno kasnijoj kompenzaciji ako VectorDatabaseService padne).
+        // NAPOMENA: ako za ovu narudzbinu jos ne postoji nijedan upisan event (prvi event uopste),  lista ce biti praznja - tada nema prethodnog stanja na koje bismo se vratili.
+        List<PromenaStatusaPorudzbine> poslednjiUpisi = repository.findLastStatusByNarudzbinaid(narudzbinaid);
+        PromenaStatusaPorudzbine staroStanje = poslednjiUpisi.isEmpty() ? null : poslednjiUpisi.get(0);
+        String prethodniStatus = staroStanje != null ? staroStanje.getNoviStatus() : NEMA_PRETHODNOG_STATUSA;
 
         // Korak 1: Upis u Influx Timeseries bazu podataka
         try {
@@ -53,7 +61,8 @@ public class SagaChoreographyService {
         // Korak 2: Objavljivanje ChangeOfOrderStatusCreatedEvent koji ce biti uhvacen od strane servisa nad vektorskom bazom podataka
         ChangeOfOrderStatusCreatedEvent event = new ChangeOfOrderStatusCreatedEvent(
                 sagaId,
-                zahtev.getPromenaStatusaPorudzbine().getNarudzbinaid(),
+                narudzbinaid,
+                prethodniStatus,
                 zahtev.getKnjige(),
                 LocalDateTime.now());
 
@@ -65,12 +74,17 @@ public class SagaChoreographyService {
             log.info("[CHOREOGRAPHY] sagaId={} -- ChangeOfOrderStatusCreateEvent objavljen na exchange={}, key={}",
                     sagaId, RabbitMQConfig.CHOREOGRAPHY_EXCHANGE, RabbitMQConfig.ORDERSTATUS_CREATED_KEY);
         } catch (Exception e) {
-            log.error("[CHOREOGRAPHY] sagaId={} -- GRESKA prilikom objave ChangeOfOrderStatusCreateEvent: {}",
-                    sagaId, e.getMessage(), e);
-            // RabbitMQ dostava nije prosla, dakle upisujemo ponovo prethodno stanje
-            log.warn("[CHOREOGRAPHY] sagaId={} -- vracamo staro stanje zbog greske", sagaId);
-            promenaStatusaPorudzbine.setTimestamp(Instant.now());
-            repository.saveStatusPromena(promenaStatusaPorudzbine);
+            log.error("[CHOREOGRAPHY] sagaId={} -- GRESKA prilikom objave ChangeOfOrderStatusCreateEvent: {}", sagaId, e.getMessage(), e);
+
+            if (staroStanje == null) {
+                // Nije postojalo prethodno stanje (ovo je bio prvi event za narudzbinu).
+                log.warn("[CHOREOGRAPHY] sagaId={} -- nema prethodnog stanja za narudzbinaid={}, rollback Koraka 1 nije moguc", sagaId, narudzbinaid);
+            } else {
+                // RabbitMQ dostava nije prosla, dakle upisujemo korektivni zapis koji vraca staro stanje
+                log.warn("[CHOREOGRAPHY] sagaId={} -- vracamo staro stanje zbog greske", sagaId);
+                staroStanje.setTimestamp(Instant.now());
+                repository.saveStatusPromena(staroStanje);
+            }
             throw new RuntimeException("RabbitMQ dostava nije prosla za sagaId=" + sagaId, e);
         }
 
